--- a/app/src/main/res/layout/activity_manage_admin_detail.xml
+++ b/app/src/main/res/layout/activity_manage_admin_detail.xml
@@ -41,7 +41,7 @@
                     android:gravity="center"
                     android:fontFamily="sans-serif-medium"
                     android:text="@string/app_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content" />
 
                 <LinearLayout
