--- a/app/src/main/res/layout/activity_detail_restaurant.xml
+++ b/app/src/main/res/layout/activity_detail_restaurant.xml
@@ -97,11 +97,11 @@
     <FrameLayout
         android:id="@+id/view_review"
         android:layout_gravity="start|bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="96dp"
+        android:layout_height="96dp">
 
         <ImageView
-            android:layout_margin="16dp"
+            android:layout_gravity="center"
             android:gravity="center"
             android:drawablePadding="5dp"
             android:visibility="visible"
@@ -111,12 +111,12 @@
             android:src="@drawable/icon_comment" />
 
         <TextView
-            android:paddingBottom="10dp"
-            android:textSize="14sp"
+            android:layout_marginBottom="8dp"
+            android:textSize="12sp"
             android:textColor="@color/white"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="review"
+            android:text="@string/review"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
