--- a/app/src/main/res/layout/dialog_city.xml
+++ b/app/src/main/res/layout/dialog_city.xml
@@ -20,13 +20,14 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_weight="1"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/black"
             android:gravity="center"
             android:textSize="16sp"
             android:text="@string/city"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="?attr/actionBarSize" />
 
         <TextView
