--- a/app/src/main/res/layout/view_add_branch_cus.xml
+++ b/app/src/main/res/layout/view_add_branch_cus.xml
@@ -1,117 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:background="@color/blue"
+<android.support.v4.widget.NestedScrollView
     android:layout_gravity="center"
-    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="280dp"
-    android:layout_height="wrap_content">
+    android:fillViewport="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:layout_marginTop="24dp"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_add_white_24dp"
-        android:layout_width="32dp"
-        android:layout_height="32dp" />
-
-    <TextView
-        android:fontFamily="sans-serif-medium"
-        android:layout_marginTop="16dp"
-        android:text="@string/add_branch"
-        android:layout_gravity="center"
-        android:textSize="16sp"
-        android:textColor="@color/white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <FrameLayout
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
+    <LinearLayout
+        android:background="@color/blue_strong"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <EditText
-            android:layout_marginRight="8dp"
-            android:maxLines="1"
-            android:ems="10"
-            android:id="@+id/ed_address"
-            android:imeOptions="actionNext"
-            android:hint="@string/address_branch"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
         <ImageView
-            android:id="@+id/im_check"
-            android:padding="2dp"
-            android:src="@drawable/click"
-            android:layout_gravity="end|center_vertical"
+            android:layout_marginTop="24dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_add_white_24dp"
             android:layout_width="32dp"
             android:layout_height="32dp" />
 
-    </FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/btn_choosePho"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/im_branch_add"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_camera_enhance_white_24dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
-
         <TextView
-            android:layout_marginLeft="8dp"
-            android:gravity="center"
+            android:fontFamily="sans-serif-medium"
+            android:layout_marginTop="16dp"
+            android:text="@string/add_branch"
             android:layout_gravity="center"
-            android:text="@string/choose_photo"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textColor="@color/white"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <FrameLayout
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:background="@color/blue_strong"
+                android:layout_marginRight="8dp"
+                android:ems="10"
+                android:id="@+id/ed_address"
+                android:imeOptions="actionNext"
+                android:hint="@string/address_branch"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/im_check"
+                android:padding="2dp"
+                android:src="@drawable/click"
+                android:layout_gravity="end|center_vertical"
+                android:layout_width="32dp"
+                android:layout_height="32dp" />
+
+        </FrameLayout>
+
+        <View
+            android:background="@color/grey"
+            android:layout_width="wrap_content"
+            android:layout_height="0.5dp"/>
+
+        <TextView
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/distinct"
+            android:textSize="16sp"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp" />
+            android:layout_marginStart="16dp" />
 
-    </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:id="@+id/rcv_distinct"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    <LinearLayout
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/btn_cancel"
-            android:background="@color/mess2"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+        <LinearLayout
+            android:id="@+id/btn_choosePho"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="14sp"
-            android:text="@string/cancel"
-            android:textColor="@color/white"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/btn_edit"
-            android:background="@color/mess1"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/im_branch_add"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_camera_enhance_white_24dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:layout_marginLeft="8dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:text="@string/choose_photo"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="16dp"
             android:gravity="center"
-            android:textSize="14sp"
-            android:text="@string/add"
-            android:textColor="@color/white"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/btn_cancel"
+                android:background="@color/mess2"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:text="@string/cancel"
+                android:textColor="@color/white"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/btn_edit"
+                android:background="@color/mess1"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:text="@string/add"
+                android:textColor="@color/white"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</android.support.v4.widget.NestedScrollView>
