--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="black">#000000</color>
     <color name="green">#37FA0C</color>
     <color name="blue">#EE62D4FF</color>
+    <color name="blue_strong">#62D4FF</color>
     <color name="transparent">#00000000</color>
     <color name="color_btn_signin_microsoft">#04aef4</color>
     <color name="color_btn_signin_microsoft_pressed">#2b88ae</color>
