--- a/app/src/main/res/layout/activity_nearby.xml
+++ b/app/src/main/res/layout/activity_nearby.xml
@@ -70,11 +70,20 @@
                     android:id="@+id/map"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"/>
+                    android:layout_height="200dp"/>
+
+                <ImageView
+                    android:src="@drawable/ic_plus"
+                    android:layout_margin="10dp"
+                    android:id="@+id/imgplusRadius"
+                    android:layout_gravity="end|top"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp" />
 
             </FrameLayout>
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/rcv_restaurant"
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
