--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -225,6 +225,14 @@
                         android:layout_height="56dp"
                         android:layout_marginEnd="16dp" />
 
+                    <ImageView
+                        android:visibility="gone"
+                        android:id="@+id/im_seeMap"
+                        android:layout_marginTop="16dp"
+                        android:src="@drawable/ic_see_map"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp" />
+
                 </LinearLayout>
 
             </LinearLayout>
