--- a/app/src/main/res/layout/activity_nearby.xml
+++ b/app/src/main/res/layout/activity_nearby.xml
@@ -54,6 +54,7 @@
     </LinearLayout>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -63,6 +64,7 @@
             android:layout_height="wrap_content">
 
             <FrameLayout
+                android:id="@+id/view_map"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
