--- a/app/src/main/res/layout/item_restaurant_horizontal.xml
+++ b/app/src/main/res/layout/item_restaurant_horizontal.xml
@@ -11,11 +11,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/img_res"
-            android:scaleType="fitCenter"
+        <FrameLayout
+            android:layout_gravity="center"
             android:layout_width="120dp"
-            android:layout_height="80dp" />
+            android:layout_height="80dp">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:id="@+id/img_res"
+                android:scaleType="fitCenter"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/close_res"
+                android:visibility="gone"
+                android:gravity="center"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@color/red"
+                android:text="@string/close"
+                android:background="@color/trans"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </FrameLayout>
 
         <TextView
             android:id="@+id/tv_name"
