--- a/app/src/main/res/layout/activity_imagedetail_review.xml
+++ b/app/src/main/res/layout/activity_imagedetail_review.xml
@@ -28,7 +28,7 @@
 
             <LinearLayout
                 android:layout_weight="1"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:orientation="vertical">
 
@@ -58,7 +58,8 @@
                 android:layout_gravity="center"
                 android:src="@drawable/ic_add_white_24dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp" />
 
         </LinearLayout>
 
