--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:text="@string/search_res"
+                android:hint="@string/search_res"
                 android:id="@+id/edt_search"
                 android:visibility="gone"
                 android:layout_marginLeft="16dp"
