--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -58,6 +58,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp" />
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/btn_camera"
+                android:layout_marginRight="8dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_camera_alt_black_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp" />
         </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
