--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,4 +42,5 @@
     <color name="green_white">#7EDF64</color>
     <color name="maps">#f17bafff</color>
     <color name="mapsfill">#efbdd7ff</color>
+    <color name="blue_ins">#36BEFF</color>
 </resources>
